@@ -130,7 +130,6 @@ namespace CORBA
   /// Valuetype-related type codes.
   extern TAO_Valuetype_Export TypeCode_ptr const _tc_ValueBase;
   extern TAO_Valuetype_Export TypeCode_ptr const _tc_EventBase;
-  extern TAO_Valuetype_Export TypeCode_ptr const _tc_Visibility;
   extern TAO_Valuetype_Export TypeCode_ptr const _tc_ValueModifier;
 
   /**
